#JQOUT | STRIP OFF JQUERY #5 ==============================  - TRANSLATE ALL REMAIN GLOBAL FUNCTIONS TO MODULES METHODS AND RUN THE FIRST INITIAL DOCUMENT-LOAD CALL => 'SERVICE.INIT' W/OUT ERRORS

--- a/index.html
+++ b/index.html
@@ -650,9 +650,9 @@
     document.addEventListener('DOMContentLoaded', async () => {
         console.log('MCV1');
 
-        let animation = '';
-        let animation_running = false;
-        let gmode = 'global';
+        // let animation = '';
+        // let animation_running = false;
+        // let gmode = 'global';
 
         localStorage.clear();
 
