#JQOUT | STRIP OFF JQUERY #5 ==============================  - ENABLE 'MONITOR' #1    > NEW MONITOR METHODS: 'INTRO'(RENAME), 'NEXT', '_NEXT-TOOLS'    > MOVE MONITORING TEMPLATES TO 'MONITOR' MODULE INSTEAD OF 'SERVICE' (DATA-SERVICE)    > START 'MONITOR' AFTER 'INTRO'  - CREATE CORE 'ROUTE' FOR INTERPRETING THE 'HTTP-QUERY'
 ++ SIMPLE MODS

--- a/index.html
+++ b/index.html
@@ -645,24 +645,24 @@
 <!-- Google tag (gtag.js) -->
 <script type="module">
     import Service from "./core/service.mjs";
+    import Route from "./component/route.mjs";
+    import Monitor from "./component/monitor.mjs";
+    import Interaction from "./interaction.mjs";
 
 
     document.addEventListener('DOMContentLoaded', async () => {
         console.log('MCV1');
 
-        // let animation = '';
-        // let animation_running = false;
-        // let gmode = 'global';
-
-        localStorage.clear();
 
         await Service.init();
-        //
-        // EVAL_EXTERNAL_URL_COMMAND();
-        //
-        // start_projector_display();
-        //
-        // initializeListeners()
+
+        Route.redirect();
+
+        Interaction.attach()
+
+        Monitor.intro()
+
+
     });
 
 
