#JQOUT | STRIP OFF JQUERY #6 ==============================  - "MONITOR" UPDATES     > EXPORT 'MONITOR' VIEWS TO OWN COMPONENTS AND SEPARATE THEM FROM CORE 'MONITOR' FUNCTION     > UPDATE STYLES TO MINIMUM     > ADD 'MONITOR' TO 'INTRODUCTION' PAGE AND ENABLE BUTTONS FOR UPDATING VIEWS W/ STATIC CONTENTS  - DISABLE PREVIOUS LISTENERS AND START FORCING COMPONENTS LISTENING ON THEIR ROOT ELEMENTS INSTEAD OF 'DOCUMENT'
 ++ UPDATING SIMPLE BUGS

--- a/dev.html
+++ b/dev.html
@@ -13,18 +13,22 @@
 
 <script type="module">
 
-    import Slider from "./component/slider.mjs";
+    import monitor from "./component/monitor.mjs";
 
-    Slider.install('dev')
-
-    document.addEventListener('DOMContentLoaded', async () => {
-
-    });
+    monitor.install('dev')
 
 </script>
 
 </body>
+<style>
+    #dev {
+        position: relative;
+        width: 100%;
+        height: 600px;
+        background: #ddd;
 
+    }
+</style>
 </html>
 
 
