#JQOUT | STRIP OFF JQUERY #7 ==============================  - 'TABLET' PAGE     > CREATE THE LEFT/RIGHT PAGE ANIMATION     > PLACE THE TABLETS TO 'TABLET' PART OF THE PAGE ( ** PARTIAL)

--- a/dev.html
+++ b/dev.html
@@ -13,9 +13,9 @@
 
 <script type="module">
 
-    import monitor from "./component/monitor.mjs";
+    import content from "./route/content.mjs";
 
-    monitor.install('dev')
+    content.load('dev')
 
 </script>
 
@@ -26,7 +26,6 @@
         width: 100%;
         height: 600px;
         background: #ddd;
-
     }
 </style>
 </html>
