--- a/dev.html
+++ b/dev.html
@@ -13,12 +13,12 @@
 
 <script type="module">
 
+    import Content from "./route/content.mjs";
+    import Layout from "./component/layout.mjs";
 
-    import Monitor from "./component/monitor.mjs";
+    Content.load('dev')
+    // Layout.open('projects-content');
 
-    Monitor.install('dev')
-
-    Monitor.next()
     // Monitor.intro()
 
 </script>
