--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
 
     <div id="wrapper">
 
-        <div id="mi-global-menu"></div>
-
-        <div id="mi-page-introduction"></div>
-
         <div id="mi-page-content"></div>
-
-        <div id="mi-page-reference"></div>
 
     </div>
 
@@ -26,23 +20,13 @@
 <!-- Google tag (gtag.js) -->
 <script type="module">
 
-    import GlobalMenu from "./component/global-menu.mjs";
     import Route from "./component/route.mjs";
 
     document.addEventListener('DOMContentLoaded', async () => {
 
         console.log('MCV2');
 
-        GlobalMenu.install('mi-global-menu')
-
         Route.init();
-        // await Service.init();
-
-        // Introduction.load('mi-page-introduction')
-
-        // Interaction.attach()
-
-        // Monitor.intro()
 
 
     });
@@ -88,7 +72,7 @@
 
     #mi-page-content {
         position: absolute;
-        top:100%;
+        top:0;
         left:0;
         width: 100vw;
         height: 100vh;
