#PWA | PWA EXAMINE #1.5 =========================  - UPDATE THE STYLES FOR THE SAMPLE FEATURES

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <title>Manos Portfolio</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link href="index.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
@@ -64,24 +65,24 @@
 
     #mi-page-introduction {
         position: absolute;
-        top:0;
-        left:0;
+        top: 0;
+        left: 0;
         width: 100vw;
         height: 100vh;
     }
 
     #mi-page-content {
         position: absolute;
-        top:0;
-        left:0;
+        top: 0;
+        left: 0;
         width: 100vw;
         height: 100vh;
     }
 
     #mi-page-reference {
         position: absolute;
-        top:200%;
-        left:0;
+        top: 200%;
+        left: 0;
         width: 100vw;
         height: 100vh;
     }
