--- a/src/index.html
+++ b/src/index.html
@@ -8,63 +8,73 @@
 <body style="background: lightgray">
 
 <script type="module">
+
     // import "./badge-category";
     // import "./badge-tool";
     // import "./content-menu";
-    // import "./extra";
     // import "./global-menu";
     // import "./global-search";
     // import "./intro-menu";
+
+    // import "./monitor";
+    // import "./monitor-view-intro";
+    // import "./monitor-view-project";
+    // import "./monitor-view-reference";
+    // import "./monitor-view-tool";
+    //
+    // import "./extra";
+
     // import "./linkpack-cert";
     // import "./linkpack-social";
     // import "./linkpack-study";
     // import "./linkpack-work";
-    // import "./monitor";
-    // import "./monitor-view-intro";
-    import "./monitor-view-project";
-    import "./monitor-view-reference";
-    import "./monitor-view-tool";
+    //
     // import "./quote-author";
     // import "./quote-intro";
     // import "./quote-siteinfo";
     // import "./quote-welcome";
+    //
     // import "./tablet-badge-category";
     // import "./tablet-badge-menu";
     // import "./tablet-badge-tool";
+    //
     // import "./timeline";
-    // import "./timeline-interactive"
+    import "./timeline-interactive"
 
 </script>
-
 
 <!--<badge-category></badge-category>-->
 <!--<badge-tool></badge-tool>-->
 <!--<content-menu></content-menu>-->
-<!--<extra></extra>-->
 <!--<global-menu></global-menu>-->
 <!--<global-search></global-search>-->
 <!--<intro-menu></intro-menu>-->
+
+<!--<joi-monitor></joi-monitor>-->
+
+<!--<monitor-view-intro></monitor-view-intro>-->
+<!--<monitor-view-project></monitor-view-project>-->
+<!--<monitor-view-reference></monitor-view-reference>-->
+<!--<monitor-view-tool></monitor-view-tool>-->
+
+<!--<extra></extra>-->
+
 <!--<linkpack-cert></linkpack-cert>-->
 <!--<linkpack-social></linkpack-social>-->
 <!--<linkpack-study></linkpack-study>-->
 <!--<linkpack-work></linkpack-work>-->
-<!--<monitor></monitor>-->
-<!--<monitor-view-intro></monitor-view-intro>-->
-<monitor-view-project></monitor-view-project>
-<hr />
-<monitor-view-reference></monitor-view-reference>
-<hr />
-<monitor-view-tool></monitor-view-tool>
-<hr />
+
 <!--<quote-author></quote-author>-->
 <!--<quote-intro></quote-intro>-->
 <!--<quote-siteinfo></quote-siteinfo>-->
 <!--<quote-welcome></quote-welcome>-->
+
 <!--<tablet-badge-category></tablet-badge-category>-->
 <!--<tablet-badge-menu></tablet-badge-menu>-->
 <!--<tablet-badge-tool></tablet-badge-tool>-->
-<!--<timeline></timeline>-->
-<!--<timeline-interactive></timeline-interactive>-->
+
+<!--<joi-timeline></joi-timeline>-->
+<timeline-interactive></timeline-interactive>
 
 </body>
 </html>
