#LIT3 | PAGE "CONTENT" W/ SPARE COMPONENTS COMMUNICATION =================================================================  - CREATE THE 'CONTENT' PAGE, 'TABLET CONTROL' AREA WHERE THE PAGE MENU UPDATES THE CONTENT OF 'TABLET LIST' VISIBLE.     > USE LIT3 'UPDATED' METHOD TO SYNC UPDATE     > USE CUSTOM EVENT @DOMAIN-CHANGE ON ROOT THAT LISTENS TO AND UPDATES THE 'TABLETS'     > CREATE CUSTOM-EVENT ON THE 'MENU' THAT THROWS THE EVENT TO ROOT

--- a/index.html
+++ b/index.html
@@ -36,20 +36,22 @@
     // import "./src/component/quote-welcome";
     //
     // import "./src/component/tablet-badge-category";
-    // import "./src/component/tablet-badge-menu";
+    // import "./src/component/content-tablet";
     // import "./src/component/tablet-badge-tool";
     //
     // import "./src/component/timeline";
     // import "./src/component/timeline-interactive"
 
 
-    import "./src/route/page-introduction"
+    // import "./src/route/page-introduction"
     import "./src/route/page-content"
+    import "./src/route/page-content-detail"
 
 </script>
 
 <!--<page-introduction></page-introduction>-->
 <page-content></page-content>
+<!--<page-content-detail></page-content-detail>-->
 
 <!--<badge-category></badge-category>-->
 <!--<badge-tool></badge-tool>-->
@@ -78,8 +80,9 @@
 <!--<quote-welcome></quote-welcome>-->
 
 <!--<tablet-badge-category></tablet-badge-category>-->
-<!--<tablet-badge-menu></tablet-badge-menu>-->
+<content-tablet></content-tablet>
 <!--<tablet-badge-tool></tablet-badge-tool>-->
+
 
 <!--<joi-timeline></joi-timeline>-->
 <!--<timeline-interactive></timeline-interactive>-->
