#LIT3 | CONVERT COMPONENTS TO LIT #5 =================================================================  - ADD CONTENT-DETAIL COMPONENT TO 'PAGE-CONTENT' AND CREATE A PROTO FOR TRANSITIONING FROM 'CONTENT-MENU' SELECTION TO 'CONTENT-DETAIL' VIEW ( ** NO ANIME ** )

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
     // import "./src/component/badge-category";
     // import "./src/component/badge-tool";
-    // import "./src/component/content-menu";
     // import "./src/component/global-menu";
     // import "./src/component/global-search";
     // import "./src/component/intro-menu";
@@ -35,8 +34,11 @@
     // import "./src/component/quote-siteinfo";
     // import "./src/component/quote-welcome";
     //
-    // import "./src/component/tablet-badge-category";
+    // import "./src/component/content-menu";
     // import "./src/component/content-tablet";
+    // import "./src/component/content-detail";
+
+    // import "./src/component/tablet-badge-category";
     // import "./src/component/tablet-badge-tool";
     //
     // import "./src/component/timeline";
@@ -45,13 +47,12 @@
 
     // import "./src/route/page-introduction"
     import "./src/route/page-content"
-    import "./src/route/page-content-detail"
 
 </script>
 
 <!--<page-introduction></page-introduction>-->
 <page-content></page-content>
-<!--<page-content-detail></page-content-detail>-->
+<!--<content-detail></content-detail>-->
 
 <!--<badge-category></badge-category>-->
 <!--<badge-tool></badge-tool>-->
@@ -80,7 +81,7 @@
 <!--<quote-welcome></quote-welcome>-->
 
 <!--<tablet-badge-category></tablet-badge-category>-->
-<content-tablet></content-tablet>
+<!--<content-tablet></content-tablet>-->
 <!--<tablet-badge-tool></tablet-badge-tool>-->
 
 
