#LIT3 | CONVERT COMPONENTS TO LIT #6 ================================================================= - ADD A 'SITE-INDEX' COMPONENT THAT HOSTS PAGES AND USES PAGE CODES TO PROVIDE MINIMUM ROUTING REQUIREMENT

--- a/index.html
+++ b/index.html
@@ -4,89 +4,17 @@
     <title>Manos Portfolio</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link href="index.css" type="text/css" rel="stylesheet"/>
+    <script type="module">
+        import "/src/index"
+    </script>
 </head>
-<body style="background: lightgray">
+<body>
 
-<script type="module">
-
-
-    // import "./src/component/badge-category";
-    // import "./src/component/badge-tool";
-    // import "./src/component/global-menu";
-    // import "./src/component/global-search";
-    // import "./src/component/intro-menu";
-
-    // import "./src/component/monitor";
-    // import "./src/component/monitor-view-intro";
-    // import "./src/component/monitor-view-project";
-    // import "./src/component/monitor-view-reference";
-    // import "./src/component/monitor-view-tool";
-    //
-    // import "./src/component/extra";
-
-    // import "./src/component/linkpack-cert";
-    // import "./src/component/linkpack-social";
-    // import "./src/component/linkpack-study";
-    // import "./src/component/linkpack-work";
-    //
-    // import "./src/component/quote-author";
-    // import "./src/component/quote-intro";
-    // import "./src/component/quote-siteinfo";
-    // import "./src/component/quote-welcome";
-    //
-    // import "./src/component/content-menu";
-    // import "./src/component/content-tablet";
-    // import "./src/component/content-detail";
-
-    // import "./src/component/tablet-badge-category";
-    // import "./src/component/tablet-badge-tool";
-    //
-    // import "./src/component/timeline";
-    // import "./src/component/timeline-interactive"
-
-
-    // import "./src/route/page-introduction"
-    import "./src/route/page-content"
-
-</script>
-
-<!--<page-introduction></page-introduction>-->
-<page-content></page-content>
-<!--<content-detail></content-detail>-->
-
-<!--<badge-category></badge-category>-->
-<!--<badge-tool></badge-tool>-->
-<!--<content-menu></content-menu>-->
-<!--<global-menu></global-menu>-->
-<!--<global-search></global-search>-->
-<!--<intro-menu></intro-menu>-->
-
-<!--<joi-monitor></joi-monitor>-->
-
-<!--<monitor-view-intro></monitor-view-intro>-->
-<!--<monitor-view-project></monitor-view-project>-->
-<!--<monitor-view-reference></monitor-view-reference>-->
-<!--<monitor-view-tool></monitor-view-tool>-->
-
-<!--<extra></extra>-->
-
-<!--<linkpack-cert></linkpack-cert>-->
-<!--<linkpack-social></linkpack-social>-->
-<!--<linkpack-study></linkpack-study>-->
-<!--<linkpack-work></linkpack-work>-->
-
-<!--<quote-author></quote-author>-->
-<!--<quote-intro></quote-intro>-->
-<!--<quote-siteinfo></quote-siteinfo>-->
-<!--<quote-welcome></quote-welcome>-->
-
-<!--<tablet-badge-category></tablet-badge-category>-->
-<!--<content-tablet></content-tablet>-->
-<!--<tablet-badge-tool></tablet-badge-tool>-->
-
-
-<!--<joi-timeline></joi-timeline>-->
-<!--<timeline-interactive></timeline-interactive>-->
+<site-index></site-index>
 
 </body>
+<style>
+
+</style>
+
 </html>
