#LIT3 | INIT THE 'IMAGE-SLIDER' COMPONENT #2 =================================================================  - BUILD 2 NEW COMPONENTS TO SHARE    > CONTENT-DETAIL    > PROJECT-TOOL

--- a/index-dev.html
+++ b/index-dev.html
@@ -9,12 +9,13 @@
 
 <script type="module">
 
-    import "/src/component/image-slider"
+    // import "/src/component/image-slider"
+    import "/src/component/project-tool"
     // import "/src/index"
 
 </script>
 
-<image-slider></image-slider>
+<project-tool></project-tool>
 
 </body>
 </html>
