#LIT3 | START DESCRIBING LATESTS PROJECTS #2 ====================================================== - SYNERGIES / MARESHOP

--- a/DETAILS_ECOEMS-DK.html
+++ b/DETAILS_ECOEMS-DK.html
@@ -1,7 +1,9 @@
-"<h3>Contracted as standalone Full Stack Developer to design and develop energy app for the Denmark side, parts of
+<h3>
+    Contracted as standalone Full Stack Developer to design and develop energy app for the Denmark side, parts of
     European - Indian endeavor in the field of Renewable energy, labeled \"EcoEms\" rooted and empowered by the greater
     movement
-    “Re-empowered”.</h3>
+    “Re-empowered”.
+</h3>
 <p>
     THE SCOPE OF THE PROJECT WAS TO ATTAIN A GOOD OVERVIEW OF PARTNERS RESOURCES STATE AND IN RETURN SIMULATE AND PUSHBACK AN OPTIMISED SCHEDULE FOR THEIR RESOURCES
     IN ORDER TO ACHIEVE THIS WE WOULD REQUILARLY CONSUME DATA LIKE FORECASTS, WEATHER REPORTS, TEMPERATURE LEVELS, RESOURCES STATUS ETC IN DIFFERENT INTERVALS DURING THE DAY.
