#LIT3 | START DESCRIBING LATESTS PROJECTS #1.5 ====================================================== - ELECTRO

--- a/DETAILS_MARESHOP.html
+++ b/DETAILS_MARESHOP.html
@@ -1,4 +1,4 @@
-SYNERGIES
+MARESHOP
 ======================
  - INTERNAL HOUSEKEEPING + ESHOP SERVICES FOR MARINE SERVICE PARTS
  - ANALYZE BUSINESS PROCESSES, GATHER AND STRUCTURE THEIR DATA RELATIONS
@@ -6,5 +6,7 @@ SYNERGIES
  - INTEGRATE PAYMENTS ONLINE / OFFLINE W/ PAYPAL AND ON-DELIVERY RESPECTIVELY
  - CREATE CARTS AND BOOKMARK FEATURES
  - SEND EMAILS AFTER ONLINE / OFFLINE PURCHASES COMMITED
- - PROVIDE SEVERAL FILTERS / SEARCH AREAS FOR PRODUCTS INDEXING
+ - PROVIDE SEVERAL FILTERS / SEARCH AREAS FOR PRODUCTS INDEXING + GLOBAL SEARCH W/ BARCODE / SERVICE PART KEYWORDS INDXING
  - USER PROFILE + AUTHENTICATION / AUTHORIZATION INTEGRATIONS
+ - PROVIDE MEANINGFULL URLS / PAGE CONTENT FOR INCREASED SEO INDEXABILITY
+ - MULTIPLE LANGUAGE SUPPORT
