#LIT3 | START DESCRIBING LATESTS PROJECTS #1.6 ====================================================== - ELECTRO ++

--- a/DETAILS_ELECTRO.html
+++ b/DETAILS_ELECTRO.html
@@ -17,3 +17,5 @@ ELECTRO
  - REFRESHABLE APP ACCESS WHILE USING THE APP
  - USER AUTHENTICATION - RESOURCES ACCESS AUTHORIZATION
  - SW | SERVICE WORKER INTEGRATION FOR BETTER APP PERFORMANCE AND STATIC ASSET CACHING
+ - PUBLISHED ONLINE / NGINX SERVER W/ REVERSE PROXY
+ - HTTPS RENEWABLE SSL CERTIFICATES
