--- a/DETAILS_MARESHOP.html
+++ b/DETAILS_MARESHOP.html
@@ -10,3 +10,4 @@ MARESHOP
  - USER PROFILE + AUTHENTICATION / AUTHORIZATION INTEGRATIONS
  - PROVIDE MEANINGFULL URLS / PAGE CONTENT FOR INCREASED SEO INDEXABILITY
  - MULTIPLE LANGUAGE SUPPORT
+ - HTTPS RENEWABLE SSL CERTIFICATES
