#LIT3-LESS | UPDATE RESUME DATA ===============================================  - ADD LATEST PROJECT / IMAGES

--- a/DETAILS_ECOEMS-DK.html
+++ b/DETAILS_ECOEMS-DK.html
@@ -1,34 +1,1 @@
-<h3>
-    Contracted as standalone Full Stack Developer to design and develop energy app for the Denmark side, parts of
-    European - Indian endeavor in the field of Renewable energy, labeled \"EcoEms\" rooted and empowered by the greater
-    movement
-    “Re-empowered”.
-</h3>
-<p>
-    THE SCOPE OF THE PROJECT WAS TO ATTAIN A GOOD OVERVIEW OF PARTNERS RESOURCES STATE AND IN RETURN SIMULATE AND PUSHBACK AN OPTIMISED SCHEDULE FOR THEIR RESOURCES
-    IN ORDER TO ACHIEVE THIS WE WOULD REQUILARLY CONSUME DATA LIKE FORECASTS, WEATHER REPORTS, TEMPERATURE LEVELS, RESOURCES STATUS ETC IN DIFFERENT INTERVALS DURING THE DAY.
-    INTERNALLY THEN AFTER MAINTAINING AND EVALUATING DATA WE WOULD DISPATCH PYTHON SIMULATIONS AND COME UP W/ THE BASE CASE SCENARIOS.
-    EVENTUALLY WE WOULD PUSH BACK OUR ESTIMATIONS TO PARTNERS REMOTE SERVICES.
-</p>
-<h5>HIGHLIGHTS</h5>
-<ul>
-    <li>
-        COMPOSE A FULL SYSTEM TO PERFORM RESPECTIVE ROUTINES AT EACH PHASE
-        - SUBSCRIBE TO REMOTE CHANNELS W/ RABBITMQ & MQTT TO RETRIEVE DATASETS IN SPARE INTERVALS
-        - CREATE INTERNAL SCHEDULING SYSTEM THAT WOULD INVOKE PROCEDURES AT PREDEFINED TIMES
-        - CREATE A PYTHON API THAT WOULD PROVIDE ENDPOINTS FOR SIMULATING DIFFERENT TASKS
-        - PUBLISH OUR PROCESSES ESTIMATIONS AT SEVERAL REMOTE CHANNELS
-    </li>
-    <li>
-        Invole Keycloak IAM controls server to control the authentication, authorization of users and resources
-    </li>
-    <li>
-        Retrieve daily measurements from extrnal resources, both real-time / scheduled-time using MQTT protocol
-    </li>
-    <li>
-        Provide the visuals for the administrators to analylize THE ORIGINAL DATASETS CONSUMED DAILY/HOURLY BY REMOTE SERVICES BUT ALSO FOR THE FINAL RESULTS PUSHED BACK AFTER PERFORMING SIMLULATIONS
-    </li>
-    <li>
-        Monitor the infrastructure safety with Prometheus and Grafana tools
-    </li>
-</ul>",
+<h3>contracted as standalone full stack developer to design and develop energy app for the denmark side, parts of european - indian endeavor in the field of renewable energy, labeled \"ecoems\" rooted and empowered by the greater movement “re-empowered”.</h3><p>the scope of the project was to attain a good overview of partners resources state and in return simulate and pushback an optimised schedule for their resources in order to achieve this we would requilarly consume data like forecasts, weather reports, temperature levels, resources status etc in different intervals during the day. internally then after maintaining and evaluating data we would dispatch python simulations and come up w/ the base case scenarios. eventually we would push back our estimations to partners remote services.</p><h5>highlights</h5><ul><li>compose a complete system infrastructure to perform respective routines at each phase - subscribe to remote channels w/ rabbitmq & mqtt to retrieve datasets in spare intervals - create internal scheduling system that would invoke procedures at predefined times - create a python api that would provide endpoints for simulating different tasks - publish our processes estimations at several remote channels</li><li>invole keycloak iam controls server to control the authentication, authorization of users and resources</li><li>retrieve daily measurements from extrnal resources, both real-time / scheduled-time using mqtt protocol</li><li>provide the visuals for the administrators to analylize the original datasets consumed daily/hourly by remote services but also for the final results pushed back after performing simlulations</li><li>monitor the infrastructure safety with prometheus and grafana tools</li></ul>,
