--- a/DETAILS_ELECTRO.html
+++ b/DETAILS_ELECTRO.html
@@ -1,21 +1,1 @@
-ELECTRO
-======================
- - ANALYZE BUSINESS PROCESSES, GATHER AND STRUCTURE THEIR DATA RELATIONS
- - RESPONSIVE LAYOUTS FOR DESKTOP / MOBILE VIEWING
- - USERS CAN REGISTER NUMEROUS COMPANIES THAT THEY MAINTAIN
- - PROVIDE NUMEROUS SEARCHING / FILTERING FEATURES THAT APPLY SPECIAL MEANING TO UNITS-STATUS / -DAMAGES /-SERVICES /-FREON INSTALLMENTS
- - CRUD OPERATIONS ON UNITS, UNITS STATUS AND SCHEDULING
- - DATA IMPORTING / EXPORTING W/ .XSL FILES + .XLS TEMPLATES FOR CONSISTENT USAGE OF THE SERVICES
- - UNITS ACTIONS SCHEDULING AND HISTORICAL SEARCH
- - REGISTER MULTIPLE ENTRIES W/ SINGLE COMMANDS / .XLS IMPORTS
- - APPLICATION PARAMETERS CONFIGURATION + CREATE NEW PROPERTIES etc
- - USER PROFILE + AUTHENTICATION / AUTHORIZATION INTEGRATIONS
- - QRCODES THAT WHEN SCANNED WILL DIRECT USERS TO UNIT STATUS PAGE WHERE ALL UNIT DETAILS ARE PRESENTABLE
- - EXPORTABLE QRCODES FOR PRINTING IN HIGH RESOLUTION + COMPANY LOG ON TOP
- - MULTIPLE LANGUAGE SUPPORT
- - INSTALLED ON GOOGLE CLOUD PLATFORM
- - REFRESHABLE APP ACCESS WHILE USING THE APP
- - USER AUTHENTICATION - RESOURCES ACCESS AUTHORIZATION
- - SW | SERVICE WORKER INTEGRATION FOR BETTER APP PERFORMANCE AND STATIC ASSET CACHING
- - PUBLISHED ONLINE / NGINX SERVER W/ REVERSE PROXY
- - HTTPS RENEWABLE SSL CERTIFICATES
+<h3>electro</h3><p>scope of the project</p><h5>highlights</h5><ul><li> analyze business processes, gather and structure their data relations</li><li> responsive layouts for desktop / mobile viewing</li><li> users can register numerous companies that they maintain</li><li> provide numerous searching / filtering features that apply special meaning to units-status / -damages /-services /-freon installments</li><li> crud operations on units, units status and scheduling</li><li> data importing / exporting w/ .xsl files + .xls templates for consistent usage of the services</li><li> units actions scheduling and historical search</li><li> register multiple entries w/ single commands / .xls imports</li><li> application parameters configuration + create new properties etc</li><li> user profile + authentication / authorization integrations</li><li> qrcodes that when scanned will direct users to unit status page where all unit details are presentable</li><li> exportable qrcodes for printing in high resolution + company log on top</li><li> multiple language support</li><li> installed on google cloud platform</li><li> refreshable app access while using the app</li><li> user authentication - resources access authorization</li><li> sw | service worker integration for better app performance and static asset caching</li><li> published online / nginx server w/ reverse proxy</li><li> https renewable ssl certificates</li></ul>
