--- a/DETAILS_MARESHOP.html
+++ b/DETAILS_MARESHOP.html
@@ -1,13 +1,1 @@
-MARESHOP
-======================
- - INTERNAL HOUSEKEEPING + ESHOP SERVICES FOR MARINE SERVICE PARTS
- - ANALYZE BUSINESS PROCESSES, GATHER AND STRUCTURE THEIR DATA RELATIONS
- - RESPONSIVE LAYOUTS FOR DESKTOP / MOBILE VIEWING
- - INTEGRATE PAYMENTS ONLINE / OFFLINE W/ PAYPAL AND ON-DELIVERY RESPECTIVELY
- - CREATE CARTS AND BOOKMARK FEATURES
- - SEND EMAILS AFTER ONLINE / OFFLINE PURCHASES COMMITED
- - PROVIDE SEVERAL FILTERS / SEARCH AREAS FOR PRODUCTS INDEXING + GLOBAL SEARCH W/ BARCODE / SERVICE PART KEYWORDS INDXING
- - USER PROFILE + AUTHENTICATION / AUTHORIZATION INTEGRATIONS
- - PROVIDE MEANINGFULL URLS / PAGE CONTENT FOR INCREASED SEO INDEXABILITY
- - MULTIPLE LANGUAGE SUPPORT
- - HTTPS RENEWABLE SSL CERTIFICATES
+<h3>mareshop</h3><p>scope of the project</p><h5>highlights</h5><ul><li> internal housekeeping + eshop services for marine service parts</li><li> analyze business processes, gather and structure their data relations</li><li> responsive layouts for desktop / mobile viewing</li><li> integrate payments online / offline w/ paypal and on-delivery respectively</li><li> create carts and bookmark features</li><li> send emails after online / offline purchases commited</li><li> provide several filters / search areas for products indexing + global search w/ barcode / service part keywords indxing</li><li> user profile + authentication / authorization integrations</li><li> provide meaningfull urls / page content for increased seo indexability</li><li> multiple language support</li><li> https renewable ssl certificates</li></ul>
