--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Manos Portfolio</title>
+    <title>MiCV</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link href="index.css" type="text/css" rel="stylesheet"/>
     <script type="module">
