#LIT3-LESS | COMMIT 'GITHUB' REQUIRED FILES #1.2 ======================================================  - CORRECT ROOT FILE

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link href="index.css" type="text/css" rel="stylesheet"/>
     <script type="module">
-        import "./src/index";
+        import "./src/index.js";
 
         import "./src/component/badge-category.js";
         import "./src/component/badge-tool.js";
