--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YPNDHPEG7N"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-YPNDHPEG7N');
+    </script>
     <title>MiCV</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link href="/index.css" type="text/css" rel="stylesheet"/>
     <script type="module" src="/src/index.js"></script>
 </head>
 <body>
-<site-index></site-index>
+    <site-index></site-index>
 </body>
 </html>
