#INDEXDB | ATTEMPT TO NEST INDEXDB FOR STORAGE #3 ====================================================== - RESTRUCTURE NAMING / PATHS / SERVICES FOR CLARITY

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>MiCV</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link href="/index.css" type="text/css" rel="stylesheet"/>
-    <script type="module" src="/src/index.js"></script>
+    <script type="module" src="/src/site-index.js"></script>
 </head>
 <body>
     <site-index></site-index>
